generated/checkers/gen/AllGen-Buffer-Overflow-b58b1b883b9b702e25204dbe2b221eecc8ecd159/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::maybeReport(const clang::Stmt*, const clang::VarDecl*, const clang::VarDecl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:165:53: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type’ {aka ‘const clang::VarDecl* const*’} to ‘const clang::VarDecl*’ in initialization
  165 |   const VarDecl *MappedIter = State->get<ShortenMap>(ShortenVD);
      |                               ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
      |                                                     |
      |                                                     clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type {aka const clang::VarDecl* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBranchCondition(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:274:55: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type’ {aka ‘const clang::VarDecl* const*’} to ‘const clang::VarDecl*’ in initialization
  274 |     const VarDecl *MappedIter = State->get<ShortenMap>(ShortenVD);
      |                                 ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
      |                                                       |
      |                                                       clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type {aka const clang::VarDecl* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:288:57: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type’ {aka ‘const clang::VarDecl* const*’} to ‘const clang::VarDecl*’ in initialization
  288 |       const VarDecl *MappedIter = State->get<ShortenMap>(ShortenVD);
      |                                   ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
      |                                                         |
      |                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::VarDecl*> >::lookup_type {aka const clang::VarDecl* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
